# TextForSpeechNormalizer

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: python-package.yml
t4s_normalizer/: __init__.py  normalize.py
tests/: test_normalize.py
tsnorm/: __init__.py  normalize.py  spacy_model.py  types.py
