[metadata]
name = tsnorm
version = attr: tsnorm.__version__
author = Vladimir Larkin
author_email = vladimir@larkin.one
url = https://github.com/NetherQuartz/TextForSpeechNormalizer
description = A library to put stress mark and Ð in Russian text
long_description = file: README.md
long_description_content_type = text/markdown
keywords = setuptools
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.10
install_requires =
    spacy >= 3.5.0

[options.package_data]
tsnorm.dictionary = wordforms.dat, lemmas.dat

[flake8]
per-file-ignores = __init__.py:F401
